--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,3 +22,20 @@ jobs:
 
     - name: Build with Maven
       run: mvn -B package --file simple-spring-boot-rest-api/pom.xml
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3.0.0
+ 
+    - name: Login to Docker Hub
+      uses: docker/login-action@v3.0.0
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+    - name: Set env
+      run: echo "DATE=$(date +%s)" >> $GITHUB_ENV
+    - name: Build and push
+      uses: docker/build-push-action@v3
+      with:
+        context: simple-spring-boot-rest-api
+        push: true
+        tags: <said36>/my-spring-boot-app:${{ env.DATE }}
